Fixed sqlalchemy version

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,9 @@ creds.py
 
 # Test environment
 Tester.ipynb
+
+# Generated data files
+*.gzip
+all_close.pk.gzip
+NASDAQ_100_list.gzip
+Russell_1000_list.gzip
