Full refactoring and modularization

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pandas==1.5.3
-yfinance
-sqlalchemy==1.4.46
 pandas_market_calendars
-psycopg2-binary
+yfinance
 pyarrow
+python-dotenv
+psycopg2-binary
